<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/profileView"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            tools:context=".UserDetailActivity">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/setupToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:titleTextColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.appcompat.widget.Toolbar>


            <ImageView
                android:id="@+id/profileCover"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:paddingBottom="1dp"
                android:src="@color/colorPrimary"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:orientation="vertical"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="20dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:layout_marginTop="-175dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal">

                        <com.pkmmte.view.CircularImageView
                            android:id="@+id/profilePhoto"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/ic_person_outline_black_24dp"
                            app:border="true"
                            app:border_color="@android:color/white"
                            app:border_width="4dp"
                            app:shadow="true"/>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal">

                        <TextView
                            android:id="@+id/profileFullName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:paddingLeft="5dp"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="@android:color/white"
                            android:maxLines="1"
                            android:shadowColor="@android:color/black"
                            android:shadowDx="1"
                            android:shadowDy="1"
                            android:shadowRadius="2"
                            android:drawablePadding="5dp"
                            android:text="@string/full_name" />

                        <TextView
                            android:id="@+id/profileUserCompany"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/user_name"
                            android:textColor="@android:color/white"
                            android:paddingLeft="5dp"
                            android:maxLines="1"
                            android:shadowColor="@android:color/black"
                            android:shadowDx="1"
                            android:shadowDy="1"
                            android:shadowRadius="2"/>

                        <LinearLayout
                            android:orientation="vertical"
                            android:visibility="visible"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="40dp">

                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <LinearLayout
                                    android:orientation="vertical"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1">

                                    <TextView
                                        android:id="@+id/profileActive"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:ellipsize="end"
                                        android:text="@string/user_online"
                                        android:textSize="20sp"
                                        android:paddingLeft="5dp"
                                        android:drawablePadding="5dp"
                                        android:maxLines="1"/>

                                </LinearLayout>

                                <Button
                                    android:id="@+id/profileFollowBtn"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/colorPrimary"
                                    android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                                    android:drawablePadding="5dp"
                                    android:paddingLeft="10dp"
                                    android:paddingRight="10dp"
                                    android:background="@android:color/transparent"
                                    android:text="@string/follow_user"
                                    android:textSize="18sp"
                                    android:textStyle="bold"/>

                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/profilePostsContainer"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:paddingRight="5dp"
                        android:paddingLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/postsCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="20"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimary"
                            android:maxLines="1"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:gravity="center_horizontal"
                            android:text="@string/posts_label"
                            android:maxLines="1"
                            android:textAllCaps="true"
                            android:textColor="@android:color/darker_gray"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/profileFollowersContainer"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:paddingRight="5dp"
                        android:paddingLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/followersCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="2.4k"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimary"
                            android:maxLines="1"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:gravity="center_horizontal"
                            android:text="@string/followers_label"
                            android:maxLines="1"
                            android:textAllCaps="true"
                            android:textColor="@android:color/darker_gray"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/profileFollowingContainer"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:paddingRight="5dp"
                        android:paddingLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/followingCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="350"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimary"
                            android:maxLines="1"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:gravity="center_horizontal"
                            android:text="@string/following_label"
                            android:maxLines="1"
                            android:textAllCaps="true"
                            android:textColor="@android:color/darker_gray"/>

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/noteText"
                    android:textSize="16sp"
                    android:textColor="@android:color/darker_gray"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/no_post"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />

    </FrameLayout>


</layout>